# todo.txt-base

./: .gitattributes  README.md  pyproject.toml  setup.py
debian/: backuptodo.1.md  backuptodo.launch  cdtodo.1.md  cdtodo.launch  changelog  clean  control  copyright  edittodo.1.md  edittodo.8.md  edittodo.launch  justone.1.md  listtodo.1.md  listtodo.8.md  listtodo.launch  rules  todo.txt  todo.txt-base.5.md  todo.txt-base.8.md  todo.txt-base.dirs  todo.txt-base.install  todo.txt-base.launch  todo.txt-base.links  todo.txt-base.manpages  todo.txt.1.md  vitodo.1.md  vitodo.8.md  vitodo.launch
debian/tests/: control  test-backup.py  test-helper.py  test-todo.py
debian/txt-base/DEBIAN/: control  md5sums
debian/txt-base/usr/share/todo.txt-base/todo_txt_base/: __init__.py  entry_points.py  hooks.py  tdtlist.py
debian/txt-base/usr/share/todo.txt-base/todo_txt_base-1.0.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
scripts/: justone
test/: test_tconfig.py
todo_txt_base/: entry_points.py  hooks.py  tconfig.py  tdtbackup.py  tdtlist.py  utils.py
